--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.7.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/yup": "^0.29.14",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
