--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@openreplay/tracker": "^17.1.6",
     "@types/nodemailer": "^7.0.9",
     "dotenv-webpack": "^8.1.1",
     "framer-motion": "^12.34.0",
